--- a/index.html
+++ b/index.html
@@ -1,1 +1,99 @@
-hello world
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio - Elio Dages</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        header {
+            background: #007BFF;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+        header h1 {
+            margin: 0;
+            font-size: 2.5rem;
+        }
+        nav {
+            display: flex;
+            justify-content: center;
+            background: #0056b3;
+            padding: 10px 0;
+        }
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            padding: 10px 20px;
+            margin: 0 10px;
+            border-radius: 5px;
+        }
+        nav a:hover {
+            background: #007BFF;
+        }
+        section {
+            max-width: 900px;
+            margin: 20px auto;
+            padding: 20px;
+            background: #fff;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        .btn {
+            display: inline-block;
+            padding: 10px 20px;
+            background: #007BFF;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+            margin-top: 20px;
+        }
+        .btn:hover {
+            background: #0056b3;
+        }
+        footer {
+            text-align: center;
+            padding: 10px;
+            background: #007BFF;
+            color: #fff;
+            margin-top: 20px;
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    <h1>Bienvenue sur mon Portfolio</h1>
+    <p>Étudiant en BTS SIO, option SISR</p>
+</header>
+
+<nav>
+    <a href="about.html">À propos</a>
+    <a href="cv.html">CV</a>
+    <a href="skills.html">Mes compétences</a>
+    <a href="projects.html">Mes projets</a>
+    <a href="veille.html">Veille technologique</a>
+    <a href="contact.html">Contact</a>
+</nav>
+
+<section>
+    <h2>Bienvenue</h2>
+    <p>Je m'appelle Elio Dages, étudiant motivé en informatique, spécialisé dans les systèmes et réseaux. Ce portfolio est conçu pour présenter mon parcours, mes compétences, mes projets, et mes aspirations dans le domaine de l'informatique.</p>
+    <p>N'hésitez pas à explorer les différentes sections pour en apprendre davantage sur moi.</p>
+    <a href="about.html" class="btn">En savoir plus</a>
+</section>
+
+<footer>
+    <p>© 2024 Elio Dages | Tous droits réservés</p>
+</footer>
+
+</body>
+</html>
+
