--- a/cv.html
+++ b/cv.html
@@ -4,123 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV - Elio Dages</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-        header {
-            background-color: #007BFF;
-            color: #fff;
-            text-align: center;
-            padding: 20px;
-        }
-        header h1 {
-            margin: 0;
-            font-size: 2.5rem;
-        }
-        section {
-            max-width: 900px;
-            margin: 20px auto;
-            padding: 20px;
-            background: #fff;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-        h2 {
-            color: #007BFF;
-            margin-bottom: 10px;
-        }
-        .cv-container {
-            display: flex;
-            flex-wrap: wrap;
-            align-items: center;
-            gap: 20px;
-        }
-        .cv-image {
-            flex: 1;
-            text-align: center;
-        }
-        .cv-image img {
-            max-width: 100%;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-        .cv-details {
-            flex: 2;
-            padding: 10px;
-        }
-        .btn {
-            display: inline-block;
-            padding: 10px 20px;
-            margin-top: 20px;
-            background: #007BFF;
-            color: #fff;
-            text-decoration: none;
-            border-radius: 5px;
-            font-size: 1rem;
-        }
-        .btn:hover {
-            background: #0056b3;
-        }
-        footer {
-            background-color: #007BFF;
-            color: #fff;
-            text-align: center;
-            padding: 10px 0;
-            margin-top: 20px;
-        }
-		.back-button a {
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-}
-.back-button a:hover {
-    color: #ddd;
-}
-    </style>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">Elio Dages</a>
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link" href="index.html">Accueil</a></li>
+            </ul>
+        </div>
+    </nav>
 
-<div class="back-button">
-    <a href="C:\Users\edages\Documents\portfolio\V2portfolio.html">⬅ Retour à l'accueil</a>
-</div>
-
-    <header>
-        <h1>Mon CV</h1>
-        <p>Découvrez mon parcours et mes compétences</p>
-    </header>
-
-    <section>
-        <div class="cv-container">
-            <!-- Section Image -->
-            <div class="cv-image">
-                <img src="cv-image.png" alt="Aperçu du CV d'Elio Dages">
-            </div>
-            <!-- Section Détails -->
-            <div class="cv-details">
-                <h2>À propos de moi</h2>
-                <p>
-                    Je suis Elio Dages, étudiant en BTS SIO option SISR, passionné par l’informatique et spécialisé dans 
-                    les systèmes et réseaux. Je cherche à relever des défis dans l’administration réseau, la sécurité 
-                    informatique et la maintenance d’infrastructures.
-                </p>
-                <h3>Compétences clés :</h3>
-                <ul>
-                    <li>Administration système : Windows/Linux.</li>
-                    <li>Configuration réseau : Cisco, VLAN, VPN.</li>
-                    <li>Outils : GLPI, Nagios, VMware.</li>
-                </ul>
-                <a href="cv-elio-dages.pdf" class="btn" download>Télécharger mon CV</a>
+    <!-- CV Section -->
+    <section class="py-5">
+        <div class="container">
+            <h2 class="text-center mb-4">Mon CV</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="assets/images/cv-image.png" alt="Photo de CV" class="img-fluid rounded">
+                </div>
+                <div class="col-md-8">
+                    <h3>À propos de moi</h3>
+                    <p>Étudiant en BTS SIO option SISR, passionné par les systèmes et réseaux informatiques. Je suis motivé par des projets innovants en administration réseau et sécurité informatique.</p>
+                    <h4>Expériences professionnelles</h4>
+                    <ul>
+                        <li>Technicien informatique chez SEB Selongey (2021-2022).</li>
+                        <li>Support technique chez CPAGE Dijon (2022-2023).</li>
+                    </ul>
+                    <h4>Compétences</h4>
+                    <ul>
+                        <li>Administration systèmes : Windows, Linux.</li>
+                        <li>Configuration réseau : VLAN, VPN, Cisco.</li>
+                        <li>Sécurité : Firewalls, sauvegardes.</li>
+                    </ul>
+                    <a href="assets/pdf/cv-elio-dages.pdf" class="btn btn-primary mt-3" download>Télécharger mon CV</a>
+                </div>
             </div>
         </div>
     </section>
 
-    <footer>
+    <!-- Footer -->
+    <footer class="bg-primary text-white text-center py-3">
         <p>© 2024 Elio Dages | Tous droits réservés</p>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
