--- a/skills.html
+++ b/skills.html
@@ -3,155 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mes compétences - Elio Dages</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-        header {
-            background-color: #007BFF;
-            color: #fff;
-            text-align: center;
-            padding: 20px;
-        }
-        header h1 {
-            margin: 0;
-            font-size: 2.5rem;
-        }
-        section {
-            max-width: 900px;
-            margin: 20px auto;
-            padding: 20px;
-            background: #fff;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-        h2 {
-            color: #007BFF;
-            margin-bottom: 10px;
-        }
-        ul {
-            padding-left: 20px;
-        }
-        ul li {
-            margin-bottom: 10px;
-            line-height: 1.6;
-        }
-        .skills-container {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-        }
-        .skill-card {
-            background: #007BFF;
-            color: #fff;
-            border-radius: 8px;
-            padding: 15px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-            text-align: center;
-        }
-        .skill-card h3 {
-            margin-bottom: 10px;
-            font-size: 1.2rem;
-        }
-        footer {
-            background-color: #007BFF;
-            color: #fff;
-            text-align: center;
-            padding: 10px 0;
-            margin-top: 20px;
-        }
-        footer p {
-            margin: 0;
-        }
-		.back-button {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    background-color: #007BFF;
-    color: white;
-    padding: 10px 15px;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    font-size: 14px;
-    text-align: center;
-}
-.back-button a {
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-}
-.back-button a:hover {
-    color: #ddd;
-}
-
-    </style>
+    <title>Compétences - Elio Dages</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">Elio Dages</a>
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link" href="index.html">Accueil</a></li>
+            </ul>
+        </div>
+    </nav>
 
-<div class="back-button">
-    <a href="C:\Users\edages\Documents\portfolio\V2portfolio.html">⬅ Retour à l'accueil</a>
-</div>
-
-    <header>
-        <h1>Mes Compétences</h1>
-        <p>Découvrez les compétences essentielles pour un administrateur réseau</p>
-    </header>
-
-    <section>
-        <h2>Compétences techniques</h2>
-        <div class="skills-container">
-            <!-- Administration système -->
-            <div class="skill-card">
-                <h3>Administration Système</h3>
-                <p>Gestion des serveurs Windows et Linux.</p>
-                <p>Création et gestion des utilisateurs (Active Directory).</p>
-                <p>Maintenance et optimisation des systèmes.</p>
-            </div>
-            <!-- Réseaux -->
-            <div class="skill-card">
-                <h3>Réseaux</h3>
-                <p>Configuration et supervision de routeurs et switches Cisco.</p>
-                <p>Création et gestion de VLAN, routage statique et dynamique.</p>
-                <p>Supervision réseau avec Nagios et Zabbix.</p>
-            </div>
-            <!-- Sécurité informatique -->
-            <div class="skill-card">
-                <h3>Sécurité Informatique</h3>
-                <p>Déploiement de firewalls (PfSense, Fortinet).</p>
-                <p>Configuration de VPN pour les accès sécurisés.</p>
-                <p>Planification de sauvegardes et politiques de sécurité.</p>
-            </div>
-            <!-- Virtualisation -->
-            <div class="skill-card">
-                <h3>Virtualisation</h3>
-                <p>Création de machines virtuelles avec VMware et VirtualBox.</p>
-                <p>Gestion des environnements virtualisés (vSphere, Proxmox).</p>
-                <p>Migration de données et virtualisation de serveurs.</p>
-            </div>
-            <!-- Gestion de tickets -->
-            <div class="skill-card">
-                <h3>Gestion et Support</h3>
-                <p>Utilisation d'outils comme Easy pour la gestion des tickets.</p>
-                <p>Résolution de problèmes techniques niveau 1 et 2.</p>
-                <p>Support aux utilisateurs sur site et à distance.</p>
-            </div>
-            <!-- Scripts et automatisation -->
-            <div class="skill-card">
-                <h3>Automatisation</h3>
-                <p>Création de scripts en Python et Bash.</p>
-                <p>Automatisation de tâches récurrentes.</p>
-                <p>Gestion des sauvegardes et mises à jour automatiques.</p>
+    <!-- Skills Section -->
+    <section class="py-5">
+        <div class="container">
+            <h2 class="text-center mb-4">Mes Compétences</h2>
+            <div class="row">
+                <div class="col-md-6">
+                    <h4>Compétences Techniques</h4>
+                    <ul>
+                        <li>Administration Windows Server et Linux (Ubuntu, CentOS).</li>
+                        <li>Configuration réseau (VLAN, VPN, routeurs, switches).</li>
+                        <li>Sécurité informatique : firewalls, audits, sauvegardes.</li>
+                        <li>Base de données : MySQL, SQL Server.</li>
+                    </ul>
+                </div>
+                <div class="col-md-6">
+                    <h4>Compétences Soft Skills</h4>
+                    <ul>
+                        <li>Travail en équipe et gestion de projet.</li>
+                        <li>Résolution de problèmes techniques.</li>
+                        <li>Communication efficace et rédaction technique.</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </section>
 
-    <footer>
-        <p>© 2024 Elio Dages | Étudiant BTS SIO SISR</p>
+    <!-- Footer -->
+    <footer class="bg-primary text-white text-center py-3">
+        <p>© 2024 Elio Dages | Tous droits réservés</p>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
